# HelloWinsockNonblockingSockets

./: CMakeLists.txt
HWNS/Source/HWNS/: Client.cpp  Client.h  Constants.h  HWNS.h  IPEndpoint.cpp  IPEndpoint.h  IPVersion.h  Network.cpp  Network.h  PResult.h  Packet.cpp  Packet.h  PacketException.h  PacketManager.cpp  PacketManager.h  PacketType.h  Server.cpp  Server.h  Socket.cpp  Socket.h  SocketHandle.h  TCPConnection.cpp  TCPConnection.h
HWNSClient/Source/HWNSClient/: Client.cpp  Client.h  MyClient.cpp  MyClient.h  main.cpp
HWNSServer/Source/HWNSServer/: MyServer.cpp  MyServer.h  Server.cpp  Server.h  main.cpp
